--- a/Sign up form.html
+++ b/Sign up form.html
@@ -175,15 +175,18 @@ input[type=submit] {
 }
 </style>
 </head>
-<body>
+<body onload="document.getElementById('id01').style.display='block'" style="width:auto;">
 
 </script>
 
 
-<h2>Modal Signup Form</h2>
+<h1>Website</h1>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
-
+<!--
+<script>
+document.onload="document.getElementById('id01').style.display='block'" style="width:auto;"
+</script>
+-->
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content" action="/action_page.php">
